--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <HTML>
-<BODY>
-<IMG SRC="./sideburns-horse.png">
-</BODY>
+<body cz-shortcut-listen="true" style="
+    text-align: center;
+">
+<img src="./sideburns-horse.png">
+</body>
 </HTML>
